[gd_scene load_steps=9 format=3 uid="uid://dhea3qmpokodb"]

[ext_resource type="Script" uid="uid://cttfofmdjmg6j" path="res://UI/game/game_ui.gd" id="1_dqf8c"]
[ext_resource type="PackedScene" uid="uid://duss0jrbf2g2c" path="res://UI/game/material_display.tscn" id="2_f7k7k"]
[ext_resource type="Texture2D" uid="uid://de6dyk3atjapq" path="res://UI/icons/Food_Ico.webp" id="3_s5bvh"]
[ext_resource type="Texture2D" uid="uid://ddcw5f7bvsaqq" path="res://UI/icons/Stone_Ico.webp" id="4_5jup1"]
[ext_resource type="Texture2D" uid="uid://dps434uxdb2oj" path="res://sprites/Sapling1.webp" id="4_f7k7k"]
[ext_resource type="Texture2D" uid="uid://d4awuyb8d6jiw" path="res://UI/icons/Skull.webp" id="5_dwmxg"]
[ext_resource type="Texture2D" uid="uid://chqee0hi76sxv" path="res://UI/icons/Gold_Ico.webp" id="6_jllct"]
[ext_resource type="Script" uid="uid://kfyv1p0we3an" path="res://UI/value_label.gd" id="6_s5bvh"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dqf8c")

[node name="MaterialBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -151.0
offset_right = -29.0
offset_bottom = -22.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10
alignment = 1

[node name="FoodDisplay" parent="MaterialBox" instance=ExtResource("2_f7k7k")]
layout_mode = 2
image = ExtResource("3_s5bvh")

[node name="WoodDisplay" parent="MaterialBox" instance=ExtResource("2_f7k7k")]
layout_mode = 2
image = ExtResource("4_f7k7k")

[node name="StoneDisplay" parent="MaterialBox" instance=ExtResource("2_f7k7k")]
layout_mode = 2
image = ExtResource("4_5jup1")

[node name="AgeNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -155.0
offset_right = 58.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0
text = "Age: 0 "
horizontal_alignment = 1
script = ExtResource("6_s5bvh")
text_label = "Age"
metadata/_custom_type_script = "uid://kfyv1p0we3an"

[node name="AgeBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -265.0
offset_top = -122.0
offset_right = 285.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0

[node name="LeaderBored" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -173.0
offset_top = 25.0
offset_right = -45.0
offset_bottom = 167.0
grow_horizontal = 0
text = "1. moomoo
2. poopoo
3. unknown"

[node name="KillsDisplay" parent="." instance=ExtResource("2_f7k7k")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -123.0
offset_top = 181.0
offset_right = -48.0
offset_bottom = 217.0
grow_horizontal = 0
image = ExtResource("5_dwmxg")
number = 6

[node name="Map" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -236.0
offset_right = 218.0
offset_bottom = -29.0
grow_vertical = 0

[node name="GoldDisplay" parent="." instance=ExtResource("2_f7k7k")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -288.0
offset_right = 105.0
offset_bottom = -252.0
grow_vertical = 0
image = ExtResource("6_jllct")
number = 5000

[node name="PingDisplay" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -13.0
offset_top = 27.0
offset_right = 39.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Ping: 0 ms"
script = ExtResource("6_s5bvh")
text_label = "Ping"
unit = "ms"
metadata/_custom_type_script = "uid://kfyv1p0we3an"
